Added Tracker response parsing